--- a/MagiRanch/build.gradle
+++ b/MagiRanch/build.gradle
@@ -3,6 +3,14 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
 }
+apply plugin: 'war'
+war {
+  enabled = true
+  // Gradle will replace the variable baseName
+  // with our app name, as defined in settings.gradle
+  archiveFileName = "${archivesBaseName}.war"
+  destinationDirectory = file("../")     // Project workspace directory
+}
 
 group = 'com.skilldistillery'
 version = '0.0.1-SNAPSHOT'
@@ -22,6 +30,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	runtimeOnly 'mysql:mysql-connector-java'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation ('org.springframework.boot:spring-boot-starter-tomcat')
 }
 
 test {
